# pe_board

./: .gitmodules  APN_OPTIMIZATION.md  CALIBRATION_GUIDE.md  CALIBRATION_PROCEDURE.md  CAN_MODULE_README.md  CMakeLists.txt  FACTORY_STANDALONE_SELFTEST.md  GNSS_LOG_CONTROL.md  HARDWARE_CONFIG_LOG.md  I2C_DEBUG_TOOLS.c  I2C_TROUBLESHOOTING.md  MOTION_SENSOR_README.md  MQTT_README.md  MQTT_RECONNECT_FIX.md  REFACTORING_GUIDE.md  UART_POLLING_MODE.md  VOLTAGE_GUI_INTEGRATION.md  add_ack_in_ontick.py  add_ack_method.py  add_clear_on_flash.py  add_clear_ui.py  add_imei_display.py  add_imei_iccid_step1.py  add_jig_flag.py  add_jig_request.py  add_jig_request_clean.py  add_jig_stop_logic.py  add_timer_methods.py  build_jig.bat  diagnose_jig_request.py  factory_gui_config.json  final_fix_jig_request.py  fix_awaiting_flag.py  fix_background_color.py  fix_duplicate.py  fix_to_gray.py  patch_gui.py  sdkconfig  update_ack_call.py  update_gui_imei_iccid.py
main/: CMakeLists.txt  battery_module.c  battery_module.h  can_module.c  can_module.h  eg915_selftest.c  eg915_selftest.h  gnss_module.c  gnss_module.h  gpio_module.c  gpio_module.h  hardware_config.h  main.c  motion_sensor.c  motion_sensor.h  mqtt_config.h  mqtt_module.c  mqtt_module.h  pe.c  pe_original.c  rs485_module.c  rs485_module.h  self_test.c  self_test.h  timer_module.c  timer_module.h
