idf_component_register(SRCS "motion_sensor.c" "main.c"
                           "gnss_module.c"
                           "mqtt_module.c" 
                           "battery_module.c"
                           "gpio_module.c"
                           "timer_module.c"
                    INCLUDE_DIRS "")
