idf_component_register(SRCS "rs485_module.c" "motion_sensor.c" "main.c"
                           "gnss_module.c"
                           "mqtt_module.c" 
                           "battery_module.c"
                           "gpio_module.c"
                           "timer_module.c"
                           "can_module.c"
                           "rs485_module.c"
                    INCLUDE_DIRS "")
